k8s/middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware
spec:
  replicas: 0
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: python-api
        image: middleware:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: middleware
spec:
  selector:
    app: middleware
  ports:
  - port: 8000
    targetPort: 8000
